--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,16 @@ dependencies:
 
   animated_text_kit: ^4.2.2
 
+  dio: ^4.0.6
+  retrofit: ^3.3.1
+
+  json_annotation: ^4.7.0
+
+  flutter_dotenv: ^5.0.2
+
+  geocoding: ^2.0.5
+  geolocator: ^9.0.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -56,6 +66,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+
+  build_runner: ^2.3.3
+  json_serializable: ^6.5.4
+  retrofit_generator: '>=4.0.0 <5.0.0'
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -70,6 +84,7 @@ flutter:
 
   assets:
     - assets/common/
+    - env/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
